# Shadow

./: .env.example  .gitignore  CLAUDE.md  Makefile  NGROK_GUIDE.md  README.md  demo.py  demo_window_info.py  main.py  pyproject.toml  test_main.http  test_slack_bot.py  test_window_integration.py
.claude/hooks/: update-docs-index.sh
docs/: implementation_status.md  p0_gap_report.md  prd.md
docs/database/: migration-guide.md
docs/direction/: agent_specification_shcema.md  data_schema.md  main_service-plan-v1.2.md  prd.md  stack-architecture.md
docs/plan/: plan-client-server-separation.md  plan-nemotron-vl.md  plan-replit-deployment.md
docs/report/: batch-analysis-observations.md  implementation_status.md  p0_gap_report.md  pattern_definition_discussion.md
docs/scenario/: scenario-01-pm-slack-response.md  scenario-02-cs-support.md  scenario-02-hr-form-management.md  scenario-03-marketer-ads-automation.md
scripts/: check_db_schema.py  check_env.sh  dev.sh  inspect_sessions_table.py  run_server.sh  start_ngrok.sh  test_batch_analysis.py
shadow/: __init__.py  cli.py  config.py
shadow/analysis/: __init__.py  base.py  claude.py  gemini.py  models.py  nemotron.py  prompts.py
shadow/api/: __init__.py  errors.py  models.py
shadow/capture/: __init__.py  input_events.py  models.py  recorder.py  screen.py  storage.py  window.py
shadow/core/: __init__.py  database.py  models.py
supabase/: config.toml
tests/: test_analysis.py  test_input_events.py  test_input_events_with_window.py  test_keyframe.py  test_recorder.py  test_screen.py  test_slack_events.py  test_slack_verification.py  test_supabase_integration.py  test_window.py
(+65 files in other folders)
